# trading-bot-smart-contract

./: .gitignore  Anchor.toml  CONTRIBUTING.md  DEBUG_CHECKLIST.md  DELEGATION_GUIDE.md  DEPLOYMENT_SUCCESS.md  FRONTEND_UPDATES_NEEDED.md  INDEX.md  LOCALNET_QUICKSTART.md  NEXT_STEPS.md  PROJECT_SUMMARY.md  QUICK_FIX.md  README.md  SECURITY.md  SETUP_SUCCESS.md  TESTING_GUIDE.md  backend-bot.ts  package.json
app/: next.config.ts
app/app/: layout.tsx
app/components/: StatusDisplay.tsx  TradeForm.tsx
app/hooks/: useBotConfig.ts  useTrade.ts
app/lib/: constants.ts  types.ts
app/scripts/: create_cpmm_pool.ts  fetch_pool_keys.ts  initialize_bot.ts  run_bot.ts  setup-local-tokens.js  setup-local-tokens.ts
backend/: .gitignore  Dockerfile  LINT_FIXES.md  QUICKSTART.md  README.md  docker-compose.yml  ecosystem.config.js  env.template
backend/examples/: create-strategy.ts  run-backtest.ts
backend/prisma/: schema.prisma
backend/src/: index.ts
docs/: CHANGELOG.md  COMMANDS.md  CPMM_INTEGRATION_STATUS.md  DEPLOY.md  DEVNET_POOL_SETUP.md  LOCALNET_TESTING.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  SETUP_STATUS.md  SUCCESS_HYBRID_IMPLEMENTATION.md  TRADING_LOGIC_IMPLEMENTATION.md
frontend/: env.local.template
frontend/app/: globals.css  layout.tsx  page.tsx
programs/trading-bot-smart-contract/: Cargo.toml
programs/trading-bot-smart-contract/src/: lib.rs
scripts/: localnet-deploy.cjs  localnet-reset.sh  localnet-setup-raydium.sh  localnet-setup.sh  setup.sh  test-setup.sh
tests/: trading-bot-smart-contract.ts  trading-bot.ts
(+60 files in other folders)
